# src/api/hospital/apis/HospitalRolesApi.ts
@@ -2,7 +2,7 @@
 /* eslint-disable */
 /**
  * Employee List Api
- * Hospital Employee List management for Web-In-Cloud system
+ * Hospital Employee Administration for Web-In-Cloud system
  *
  * The version of the OpenAPI document: 1.0.0
  * Contact: xbelake@stuba.sk
