# src/api/hospital/models/index.ts
@@ -1,4 +1,5 @@
 /* tslint:disable */
 /* eslint-disable */
 export * from './EmployeeListEntry';
+export * from './Hospital';
 export * from './Role';
